objects/PortalNotification__c.object
<CustomObject>
    <description>History of email notifications sent regularly from the portal to portal users.</description>
    <fields>
        <fullName>AccountFormula__c</fullName>
        <description>The account that this recipient is in.</description>
        <formula>PortalNotificationSchedule__r.Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The account that this recipient is in.</inlineHelpText>
        <label>Account Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentBitGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>States whether there is data in the report portion of the email notification.</description>
        <inlineHelpText>States whether there is data in the report portion of the email notification.</inlineHelpText>
        <label>Content Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataEndDate__c</fullName>
        <description>The end date and time of the data in the report part of the email notification content.</description>
        <inlineHelpText>The starting date and time of the data in the report part of the email notification content.</inlineHelpText>
        <label>Data End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataStartDate__c</fullName>
        <description>The starting date and time of the data in the report part of the email notification content.</description>
        <inlineHelpText>The starting date and time of the data in the report part of the email notification content.</inlineHelpText>
        <label>Data Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmployeeCountGenerated__c</fullName>
        <description>The number of unique employees covered in this report across all programs and locations, not just the ones showing in the email notification content.</description>
        <inlineHelpText>The number of unique employees covered in this report across all programs and locations, not just the ones showing in the email notification content.</inlineHelpText>
        <label>Employee Count Generated</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationCountGenerated__c</fullName>
        <description>The number of locations covered in this report, not just the ones showing in the email notification content.</description>
        <inlineHelpText>The number of locations covered in this report, not just the ones showing in the email notification content.</inlineHelpText>
        <label>Location Count Generated</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PortalNotificationSchedule__c</fullName>
        <description>The schedule under which this portal notification email was sent.</description>
        <inlineHelpText>The schedule under which this portal notification email was sent.</inlineHelpText>
        <label>Portal Notification Schedule</label>
        <referenceTo>PortalNotificationSchedule__c</referenceTo>
        <relationshipLabel>Portal Notifications</relationshipLabel>
        <relationshipName>PortalNotifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SentDate__c</fullName>
        <description>The date and time the email notification was sent.</description>
        <inlineHelpText>The date and time the email notification was sent.</inlineHelpText>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <label>Portal Notification</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Portal Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>